--- a/Horizon/Horizon/Sources/Scripts/WebHighlighting/src/index.html
+++ b/Horizon/Horizon/Sources/Scripts/WebHighlighting/src/index.html
@@ -16,7 +16,7 @@
         if (notebookTextSelection) {
           notebookTextSelection.backgroundColor = "yellow";
           notebookTextSelection.borderColor = "red";
-          notebookTextSelection.iconSVG = `M598.23-639.31q0-49.54-33.11-79.58-33.12-30.03-87.43-30.03-34.38 0-60.96 14.03-26.58 14.04-45.89 42.27-11.38 16.08-30.42 19-19.03 2.93-33.27-9.3-10.53-9.16-12.03-22.96-1.5-13.81 6.42-26.2 30.46-46.07 75.35-70.07 44.88-24 100.8-24 89.31 0 145.39 51.15 56.07 51.15 56.07 133.23 0 43.46-18.61 79.65-18.62 36.2-63.46 77.89-42 38.08-57.31 61.81T522-369.08q-2.46 17.08-14.15 28.46-11.7 11.39-28.16 11.39t-28.15-11.27-11.69-27.73q0-40.15 18.34-73.42 18.35-33.27 61.43-71.58 46-40.38 62.3-67.39 16.31-27 16.31-58.69M477.69-100q-24.54 0-42.27-17.73T417.69-160t17.73-42.27T477.69-220t42.27 17.73T537.69-160t-17.73 42.27T477.69-100`;
+          notebookTextSelection.borderStyle = "solid";
 
           notebookTextSelections.push(notebookTextSelection);
         }
